jaeger-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  annotations:
    cert-manager.io/cluster-issuer: "vault"
spec:
  ingressClassName: nginx
  rules:
  - host: "jaeger.amoyel.loc"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tracing
            port:
              number: 80
  tls:
  - hosts:
    - jaeger.amoyel.loc
    secretName: jaeger-tls
