kiali-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  annotations:
    cert-manager.io/cluster-issuer: "vault"
spec:
  ingressClassName: nginx
  rules:
  - host: "kiali.amoyel.loc"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
  tls:
  - hosts:
    - kiali.amoyel.loc
    secretName: kiali-tls
